--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "issues": "https://github.com/silvercommerce/quantityfield/issues"
     },
     "require": {
-        "silverstripe/framework": "~4.0"
+        "silverstripe/framework": "^5"
     },
     "autoload": {
         "psr-4": {
